--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
+    <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora illum soluta, numquam quas enim repellendus fugit. Autem, hic. Praesentium voluptate veniam commodi nobis ad voluptates molestiae, repellat facere beatae aperiam.</div>
     <!-- <div class="fixed"></div>
     <div class="fixed"></div>
 
