--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora illum soluta, numquam quas enim repellendus fugit. Autem, hic. Praesentium voluptate veniam commodi nobis ad voluptates molestiae, repellat facere beatae aperiam.</div>
+    <div class="container">
+        <div class="col">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus ullam velit a quas, magnam tempore ab explicabo officiis! Animi sapiente nulla repellendus architecto unde sunt blanditiis, officiis tenetur vel? Minima.</div>
+    </div>
     <!-- <div class="fixed"></div>
     <div class="fixed"></div>
 
