--- a/src/index.html
+++ b/src/index.html
@@ -14,14 +14,14 @@
     gigigigigigigigigigigi
     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro, quas consequatur consectetur numquam minus architecto a magni quo itaque. Neque vel deleniti officia et voluptatibus ducimus totam laborum accusamus maxime.
     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem, ad asperiores! Corrupti dolore, laborum assumenda ipsa iure deleniti tempora eum alias sunt odio aliquam non, quibusdam eveniet beatae impedit consectetur.
-    <!-- <div class="fixed"></div>
+    <div class="fixed"></div>
     <div class="fixed"></div>
 
     <div class="rubber"></div>
-    <div class="rubber"></div> -->
+    <div class="rubber"></div> 
 
-    <!-- <div class="adaptive"></div>
-    <div class="adaptive"></div> -->
+    <div class="adaptive"></div>
+    <div class="adaptive"></div> 
 
     <div class="responsive"></div>
     <div class="responsive"></div>
