--- a/src/index.html
+++ b/src/index.html
@@ -25,5 +25,6 @@
 
     <div class="responsive"></div>
     <div class="responsive"></div>
+    <div class="adaptive">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum dicta cum autem, eaque, veniam ex quia est rerum recusandae quis debitis? Quisquam, molestias nemo sed officiis suscipit pariatur eveniet voluptas!</div>
 </body>
 </html>
