--- a/src/index.html
+++ b/src/index.html
@@ -26,5 +26,6 @@
     <div class="responsive"></div>
     <div class="responsive"></div>
     <div class="adaptive">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum dicta cum autem, eaque, veniam ex quia est rerum recusandae quis debitis? Quisquam, molestias nemo sed officiis suscipit pariatur eveniet voluptas!</div>
+    <div class="mergeafter">opkrjgoanovpjcemvopikfpoiibcmovjixocmtibrvx;mwcbuilkt;wxrv,imrelucyiuwgjiirfiuvxuhjxwociuwhveklugjhnviugjhnvjekgbfkc</div>
 </body>
 </html>
