--- a/src/index.html
+++ b/src/index.html
@@ -27,5 +27,6 @@
     <div class="responsive"></div>
     <div class="adaptive">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum dicta cum autem, eaque, veniam ex quia est rerum recusandae quis debitis? Quisquam, molestias nemo sed officiis suscipit pariatur eveniet voluptas!</div>
     <div class="merge">gjsk;lakvbfnkfsnijncjisfhgiwnbvtcjmgfsx;jacreomrvicrgfjaxurciervuschfmxisecerkjhnvxkvchrbcviukchxerlgtckfxalcjhgdshsbngfxbvnhbivnuwippppppppppppppppppppprxbvvvvvvvvvvvvvvvvvvjkkkkkjcterpigoxjmre9ptiboxjgwmiecrpto;miwjlrx</div>
+    <div class="mermerge">vkfdlbmsfblkvs;m;dlknls;dk;c</div>
 </body>
 </html>
